<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Title for Latin keyboard -->
    <string name="ime_name">Hunminjeongeum IME</string>
    <string name="english_ime_name">Hunminjeongeum IME</string>
    <!-- Title for Latin keyboard settings activity / dialog -->
    <string name="english_ime_settings">Hunminjeongeum IME settings</string>

    <string name="input_feedback">Input feedback</string>
    <!-- Option to provide vibrate/haptic feedback on keypress -->
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <!-- Option to play back sound on keypress in soft keyboard -->
    <string name="sound_on_keypress">Sound on keypress</string>
    
    <string name="input_config">Input config</string>
    <string name="hangul_kbd_type">Hangul Keyboard Type</string>
    <string name="hangul_kbd_type_desc">Select Hangul Keyboard Type</string>
    <string-array name="hangul_kbd_type_list">
        <item>Full size keyboard</item>
        <item>Compact size keyboard</item>
    </string-array>
    <string-array name="hangul_kbd_type_value">
        <item>1</item>
        <item>0</item>
    </string-array>
    
    <string name="hangul_automata_type">Hangul automata type</string>
    <string name="hangul_automata_type_desc">Select Hangul automata type</string>
    <string-array name="hangul_automata_type_list">
        <item>Auto correction input sequence</item>
        <item>Typical</item>
        <item>Write separately</item>
        <item>Raw unit</item>
    </string-array>
    <string-array name="hangul_automata_type_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    
    <string name="backspace_option">Backspace behavior</string>
    <string name="backspace_option_desc">
        "Configure backspace behavior"
    </string>
    <string-array name="backspace_option_list">
        <item>Always by unit</item>
        <item>By unit for composition</item>
        <item>By syllable</item>
    </string-array>
    <string-array name="backspace_option_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    
    <string name="delete_by_base_unit">Delete by base unit</string>
    <string name="infinite_compose_unit">Infinite compose unit</string>
    
    <!-- Accented forms of "a" -->
    <string name="alternates_for_a">àáâãäåæ</string>
    <!-- Accented forms of "e" -->
    <string name="alternates_for_e">èéêë</string>
    <!-- Accented forms of "i" -->
    <string name="alternates_for_i">ìíîï</string>
    <!-- Accented forms of "o" -->
    <string name="alternates_for_o">òóôõöœø</string>
    <!-- Accented forms of "u" -->
    <string name="alternates_for_u">ùúûü</string>
    <!-- Letters associated with "s" -->
    <string name="alternates_for_s">§ß</string>
    <!-- Accented forms of "n" -->
    <string name="alternates_for_n">ñ</string>
    <!-- Accented forms of "c" -->
    <string name="alternates_for_c">ç</string>
    <!-- Accented forms of "y" -->
    <string name="alternates_for_y">ýÿ</string>
    <!-- Accented forms of "z" -->
    <string name="alternates_for_z"></string>

    <!-- Label for soft enter key when it performs GO action.  Must be short to fit on key! -->
    <string name="label_go_key">Go</string>
    <!-- Label for soft enter key when it performs NEXT action.  Must be short to fit on key! -->
    <string name="label_next_key">Next</string>
    <!-- Label for soft enter key when it performs DONE action.  Must be short to fit on key! -->
    <string name="label_done_key">Done</string>
    <!-- Label for soft enter key when it performs SEND action.  Must be short to fit on key! -->
    <string name="label_send_key">Send</string>
    <!-- Label for "switch to symbols" key.  Must be short to fit on key! -->
    <string name="label_symbol_key">\?123</string>
    <!-- Label for "switch to numeric" key.  Must be short to fit on key! -->
    <string name="label_phone_key">123</string>
    <!-- Label for "switch to alphabetic" key.  Must be short to fit on key! -->
    <string name="label_alpha_key">ABC</string>
    <string name="label_hangul_key">"Han"</string>
    <!-- Label for ALT modifier key.  Must be short to fit on key! -->
    <string name="label_alt_key">ALT</string>
    <string name="inputMethod">Input Method</string>
</resources>