<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="english_ime_settings"
    android:title="@string/english_ime_settings" >

    <PreferenceCategory
        android:title="@string/input_feedback">
	    <CheckBoxPreference
	        android:key="vibrate_on"
	        android:persistent="true"
	        android:title="@string/vibrate_on_keypress"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="sound_on"
	        android:persistent="true"
	        android:title="@string/sound_on_keypress"
	        android:defaultValue="true" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/input_config">
	    <ListPreference
	        android:key="hangul_keyboard_type"
	        android:persistent="true"
	        android:title="@string/hangul_kbd_type"
	        android:summary="@string/hangul_kbd_type_desc"
	        android:entries="@array/hangul_kbd_type_list"
	        android:entryValues="@array/hangul_kbd_type_value"
	        android:defaultValue="0" />
	    
	    <ListPreference
	        android:key="hangul_automata_type"
	        android:persistent="true"
	        android:title="@string/hangul_automata_type"
	        android:summary="@string/hangul_automata_type_desc"
	        android:entries="@array/hangul_automata_type_list"
	        android:entryValues="@array/hangul_automata_type_value"
	        android:defaultValue="0" />
	    
	    <CheckBoxPreference
            android:key="infinite_compose_unit"
            android:persistent="true"
            android:title="@string/infinite_compose_unit"
            android:defaultValue="false" />
	    
	    <ListPreference
	        android:key="backspace_option"
	        android:persistent="true"
	        android:title="@string/backspace_option"
	        android:summary="@string/backspace_option_desc"
	        android:entries="@array/backspace_option_list"
	        android:entryValues="@array/backspace_option_value"
	        android:defaultValue="0" />
	    
	    <CheckBoxPreference
            android:key="delete_by_base_unit"
            android:persistent="true"
            android:title="@string/delete_by_base_unit"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>